<resources>
    <string name="app_name">SIACentro</string>
    <string name="nav_header_title">SIAC Centro</string>
    <string name="nav_header_subtitle">Reporte de anomalías</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuraciones</string>

    <string name="menu_home">SIAC</string>
    <string name="menu_login">Ingresar</string>
    <string name="menu_gallery">Mis Reportes</string>
    <string name="menu_about">Acerca de</string>
    <string name="prompt_email">CURP</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="action_login">Ingresar</string>
    <string name="action_logout">Cerrar Sesión</string>
    <string name="action_register">Registrate</string>
    <string name="welcome">"Bienvenido!"</string>
    <string name="invalid_username">CURP no valida</string>
    <string name="invalid_password">El password debe ser >= 5 caracteress</string>
    <string name="login_failed">"Ingreso fallido"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="ingresar">Ingresar</string>
    <string name="lbl1NoLogueado">Aún no has ingresado a la plataforma, para loguearte, presione el siguiente botón:</string>
    <string name="lbl2NoLogueado">Si no esta registrado(a), puede registarse con unos sencillos pasos, presionando el siguiente botón:</string>
    <string name="registrate">RegÍstrate</string>
    <string name="ver_perfil">Ver Perfil</string>
    <string name="cambiar_password">Cambiar Password</string>
    <string name="cambiar_avatar">Cambiar Imagen</string>
    <string name="apellido_paterno">Apellido Paterno</string>
    <string name="apellido_materno">Apellido Materno</string>
    <string name="nombre">Nombre</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="domicilio_del_usuario">Domicilio del Usuario</string>
    <string name="registrar">Registrar</string>
    <string name="proporcione_los_siguientes_datos">Proporcione los siguientes datos:</string>
    <string name="hembra">Mujer</string>
    <string name="varon">Hombre</string>
    <string name="obtener_imagen">Obtener Imagen</string>
    <string name="guardar_imagen">Enviar</string>
    <string name="Hombre">Hombre</string>
    <string name="Mujer">Mujer</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="mis_solicitudes_de_servicio">Mis solicitudes de servicio</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="fuga_de_agua_potable">FUGA DE AGUA POTABLE</string>
    <string name="fuga_de_aguas_negras">ALCANTARILLADO / AGUAS NEGRAS</string>
    <string name="alcantarilla_sin_tapa">Alcantarilla sin Tapa</string>
    <string name="socav_n">SOCAVON / HUNDIMIENTO</string>
    <string name="reparaci_n_calles_bacheo">REPARACION DE CALLES (BACHEO)</string>
    <string name="alumbrado_p_blico">ALUMBRADO PÚBLICO</string>
    <string name="recolecci_n_de_basura">RECOLECCIÓN DE BASURA</string>


</resources>