<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_home"
    >

    <fragment
        android:id="@+id/nav_home"
        android:name="mx.gob.villahermosa.siacentro.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"
        />

    <fragment
        android:id="@+id/nav_ingresar"
        android:name="mx.gob.villahermosa.siacentro.ui.usuario.IngresarFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_ingresar"
        />

    <fragment
        android:id="@+id/nav_registar"
        android:name="mx.gob.villahermosa.siacentro.ui.usuario.RegistrarFragment"
        android:label="Registrar"
        tools:layout="@layout/fragment_registrar"
        />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="mx.gob.villahermosa.siacentro.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery"
        />

    <fragment
        android:id="@+id/nav_about"
        android:name="mx.gob.villahermosa.siacentro.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about"
        />

</navigation>