<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="@drawable/background"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/lnHrz"
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="start"
        android:elevation="8dp"
        android:background="@drawable/cardview_two"
       >



        <ImageView
            android:id="@+id/imgHomeUserFrag"
            android:background="@drawable/round_outline"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:padding="3dp"
            android:contentDescription="@string/todo" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/imgHomeUserFrag"

            >

            <TextView
                android:id="@+id/lblFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/material_dynamic_primary0"
                />

            <TextView
                android:id="@+id/FullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/material_dynamic_primary0"
                />

        </LinearLayout>

    </LinearLayout>


    <ScrollView
        android:id="@+id/scroll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/lnHrz"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnHrz"
        android:paddingBottom="150dp"
        android:orientation="vertical"
    >

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            android:orientation="vertical"
            android:layout_marginBottom="200dp"
            >

                <ImageButton
                    android:id="@+id/btnPrimary0"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/cardview_three"
                    android:padding="3dp"
                    android:contentDescription="@string/action_sign_in"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:elevation="8dp"
                    />

            <ImageButton
                android:id="@+id/btnPrimary1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/cardview_three"
                android:padding="3dp"
                android:contentDescription="@string/action_sign_in"
                android:textAlignment="center"
                android:textSize="20sp"
                android:elevation="8dp"
                />


            <ImageButton
                android:id="@+id/btnPrimary2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/cardview_three"
                android:padding="3dp"
                android:contentDescription="@string/action_sign_in"
                android:textAlignment="center"
                android:textSize="20sp"
                android:elevation="8dp"
                />

            <ImageButton
                android:id="@+id/btnPrimary3"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/cardview_three"
                android:padding="3dp"
                android:contentDescription="@string/action_sign_in"
                android:textAlignment="center"
                android:textSize="20sp"
                android:elevation="8dp"
                />

            <ImageButton
                android:id="@+id/btnPrimary4"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/cardview_three"
                android:padding="3dp"
                android:contentDescription="@string/action_sign_in"
                android:textAlignment="center"
                android:textSize="20sp"
                android:elevation="8dp"
                />


        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:id="@+id/llSinLogueo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="start"
        android:elevation="8dp"
        android:background="@drawable/cardview_three"
        >

        <TextView
            android:id="@+id/tw01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/lbl1NoLogueado"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/btnIngresar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:theme="@style/Animation.Design.BottomSheetDialog"
            android:backgroundTint="@color/gray"
            android:textColor="@color/white"
            android:text="@string/action_login"
            android:layout_marginTop="16dp"
            />

        <TextView
            android:id="@+id/tw02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:textAlignment="center"
            android:text="@string/lbl2NoLogueado"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/btnRegistry1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:theme="@style/Animation.Design.BottomSheetDialog"
            android:backgroundTint="@color/teal_200"
            android:textColor="@color/white"
            android:text="@string/registrate"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>