<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.AddImageActivity"
    android:background="@drawable/background"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appBarMenu">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="96dp"
            android:padding="8dp">


            <LinearLayout
                android:id="@+id/llImageSend"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:gravity="start"
                >

                <ImageView
                    android:id="@+id/imageToSend"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/cardview_two"
                    android:contentDescription="@string/todo"
                    android:scaleType="centerCrop"

                    />
            </LinearLayout>

            <ImageButton
                android:id="@+id/btnRotateImagen"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="end"
                android:background="@drawable/ic_rotate_90_degrees_cw_24"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3"
                android:contentDescription="@string/todo"
                />


            <ProgressBar
                android:id="@+id/loading_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btnRotateImagen"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCallMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="32dp"
                android:enabled="true"
                android:textColor="@color/white"
                android:text="@string/obtener_imagen"
                android:backgroundTint="@color/secondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loading_avatar"
                app:layout_constraintVertical_bias="0.2"
                />

            <Button
                android:id="@+id/btnSaveImabe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/guardar_imagen"
                android:textColor="@color/white"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/btnCallMenu" />

        </LinearLayout>


    </ScrollView>

    <include
        android:id="@+id/appBarMenu"
        layout="@layout/app_bar_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="16dp" />



</androidx.constraintlayout.widget.ConstraintLayout>